<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zubinthakkar.asktoagriexpert.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_farmer"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="180dp"
            android:background="@color/colorPrimary"
            android:text="@string/farmer_login"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_expert"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/expert_login"
            android:textColor="#ffffff" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="180dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectlang"
                android:layout_gravity="center"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:background="@color/colorPrimaryDark"
                android:textColor="#FFFFFF"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            >
            <Button
                android:id="@+id/hindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:background="@color/colorPrimaryDark"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp">
            <Button
                android:id="@+id/gujarati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gujarati"
                android:background="@color/colorPrimaryDark"
                android:textColor="#FFFFFF"
                />
        </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>